--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,15 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Stand Up Reminder",
-  "version": "1.0",
+  "version": "2",
   "description": "A reminder to stand up and stretch your legs for one minute every hour.",
   "short_name": "Stand Up",
-  "permissions": [
-    "contextMenus",
-    "alarms",
-    "storage"
-  ],
+  "permissions": ["contextMenus", "alarms", "storage", "tabs"],
   "background": {
-    "scripts": [
-      "background.js"
-    ]
+    "service_worker": "service_worker.js"
   },
-  "browser_action": {
+  "content_scripts": [{ "matches": ["<all_urls>"], "js": ["content.js"] }],
+  "action": {
     "default_icon": {
       "16": "icons/icon16.png",
       "48": "icons/icon48.png"
