--- a/manifest.json
+++ b/manifest.json
@@ -4,21 +4,21 @@
   "version": "2",
   "description": "A reminder to stand up and stretch your legs for one minute every hour.",
   "short_name": "Stand Up",
-  "permissions": ["contextMenus", "alarms", "storage", "tabs"],
+  "permissions": ["alarms", "storage"],
   "background": {
     "service_worker": "service_worker.js"
   },
   "content_scripts": [{ "matches": ["<all_urls>"], "js": ["content.js"] }],
   "action": {
     "default_icon": {
-      "16": "icons/icon16.png",
+      "16": "icons/icon48.png",
       "48": "icons/icon48.png",
       "128": "icons/icon128.png"
     },
     "default_popup": "popup.html"
   },
   "icons": {
-    "16": "icons/icon16.png",
+    "16": "icons/icon48.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   }
