remove content scripts to use less invasive permissions - use idle api to insure alarm is set on start up

--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,13 @@
 {
   "manifest_version": 3,
   "name": "Stand Up Reminder",
-  "version": "2",
+  "version": "2.1",
   "description": "A reminder to stand up and stretch your legs for one minute every hour.",
   "short_name": "Stand Up",
-  "permissions": ["alarms", "storage"],
+  "permissions": ["alarms", "storage", "idle"],
   "background": {
     "service_worker": "service_worker.js"
   },
-  "content_scripts": [{ "matches": ["<all_urls>"], "js": ["content.js"] }],
   "action": {
     "default_icon": {
       "16": "icons/icon48.png",
